[project]
name = "friend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Syed Hamza Ali", email = "ha5755420@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
friend = "friend:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
